refactoring from message to task
